[gd_scene load_steps=5 format=3 uid="uid://b0ybgofwa83cu"]

[ext_resource type="Script" path="res://src/scripts/UI/ui.gd" id="1_s427g"]
[ext_resource type="LabelSettings" uid="uid://bx4beocv5cqnq" path="res://src/other/font UI/font_ui.tres" id="2_qxkp4"]
[ext_resource type="Texture2D" uid="uid://b4at7vnuckd7k" path="res://Sprites/svg/life bar front.svg" id="3_4nx0n"]
[ext_resource type="Texture2D" uid="uid://smkqnb6bom16" path="res://Sprites/svg/life bar under.svg" id="3_4qssv"]

[node name="UI" type="VBoxContainer" groups=["UI"]]
z_index = 3
offset_left = 1350.0
offset_top = 185.0
offset_right = 1797.0
offset_bottom = 292.0
script = ExtResource("1_s427g")

[node name="Score" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Score Label" type="Label" parent="Score"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "Score
"
label_settings = ExtResource("2_qxkp4")

[node name="Score" type="Label" parent="Score"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
label_settings = ExtResource("2_qxkp4")

[node name="Mana" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="Mana Label" type="Label" parent="Mana"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "Mana"
label_settings = ExtResource("2_qxkp4")

[node name="Mana" type="Label" parent="Mana"]
z_index = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
label_settings = ExtResource("2_qxkp4")

[node name="ManaBar" type="Control" parent="."]
layout_mode = 2

[node name="Mana1" type="TextureProgressBar" parent="ManaBar"]
layout_mode = 0
offset_left = -176.0
offset_top = -4.0
offset_right = 271.0
offset_bottom = 28.0
max_value = 10.0
texture_over = ExtResource("3_4nx0n")
texture_progress = ExtResource("3_4qssv")

[node name="Mana2" type="TextureProgressBar" parent="ManaBar"]
layout_mode = 2
offset_left = -2.0
offset_top = -4.0
offset_right = 445.0
offset_bottom = 28.0
texture_over = ExtResource("3_4nx0n")
texture_progress = ExtResource("3_4qssv")

[node name="Mana3" type="TextureProgressBar" parent="ManaBar"]
layout_mode = 2
offset_left = 172.0
offset_top = -4.0
offset_right = 364.0
offset_bottom = 28.0
texture_over = ExtResource("3_4nx0n")
texture_progress = ExtResource("3_4qssv")

[node name="Mana4" type="TextureProgressBar" parent="ManaBar"]
layout_mode = 0
offset_left = 346.0
offset_top = -4.0
offset_right = 538.0
offset_bottom = 28.0
texture_over = ExtResource("3_4nx0n")
texture_progress = ExtResource("3_4qssv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1
